--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'ZIP TO S3'
-description: 'Greet someone and record the time'
+description: 'Zip a NODE/NEXT project and publish a zip file to S3'
 inputs:
   folder:  # folder name
     description: 'Folder Name'
